# EmbWIot_Final_Group5

./: LICENSE  README.md  convert_aoa.py  intro.md  process_bags.py  requirements.txt  tag_localization_nlos_no14.py
bags/point1/: metadata.yaml  point1_0.db3
bags/point10/: metadata.yaml  point10_0.db3
bags/point11/: metadata.yaml  point11_0.db3
bags/point12/: metadata.yaml  point12_0.db3
bags/point13/: metadata.yaml  point13_0.db3
bags/point14/: metadata.yaml  point14_0.db3
bags/point15/: metadata.yaml  point15_0.db3
bags/point16/: metadata.yaml  point16_0.db3
bags/point17/: metadata.yaml  point17_0.db3
bags/point18/: metadata.yaml  point18_0.db3
bags/point2/: metadata.yaml  point2_0.db3
bags/point3/: metadata.yaml  point3_0.db3
bags/point4/: metadata.yaml  point4_0.db3
bags/point5/: metadata.yaml  point5_0.db3
bags/point6/: metadata.yaml  point6_0.db3
bags/point7/: metadata.yaml  point7_0.db3
bags/point8/: metadata.yaml  point8_0.db3
bags/point9/: metadata.yaml  point9_0.db3
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/xplr_aoa3/lib/xplr_aoa3/: aoa_node
install/xplr_aoa3/share/xplr_aoa3/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xplr_aoa3/share/xplr_aoa3/launch/: aoa_launch.py
log/: latest_build
scripts/: tag_localization.py  tag_localization_nlos.py
src/xplr_aoa3/: setup.cfg  setup.py
src/xplr_aoa3/xplr_aoa3/: aoa_node.py
src/xplr_aoa3_msgs/: CMakeLists.txt
src/xplr_aoa3_msgs/msg/: AoaMeasurement.msg
(+29 files in other folders)
